@@ -1,6 +1,7 @@
 2008-05-28 Anuradha Ratnaweera <anuradha@taprobane.org>
 
 	* Intuitive behaviour of al kireema after vowels and modifiers.
+	* Allow typing rakaransaya or yansaya after a modifier.
 
 2008-05-26 Anuradha Ratnaweera <anuradha@taprobane.org>
 
